[package]
name = "fast_pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1"
parking_lot = "0.11"
crossbeam-utils = "0.8.5"

[dependencies.fast_pool-macros]
git = "https://github.com/AlvaroMS25/fast_pool.git"
optional = true

[features]
default = []
async = []
macros = ["fast_pool-macros"]
full = ["async", "macros"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }