[package]
name = "fast_pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1"
parking_lot = "0.11"
crossbeam-utils = "0.8.5"
crossbeam-channel = "0.5.2"
crossbeam-queue = "0.3.4"

[dependencies.fast_pool-macros]
git = "https://github.com/AlvaroMS25/fast_pool.git"
optional = true

[features]
default = []
macros = ["fast_pool-macros"]
full = ["macros"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }